# BlackHole

./: CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
shaders/: fragment.glsl
src/: glad.c  main.cpp
